# llmdojo

./: .gitattributes  .gitignore  CHANGELOG.md  DEV.md  MANIFEST.in  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
claude/: README.md  python-project-bootstrap.sh  startup.py  startup.txt
llmdojo/: _modidx.py  claudedojo.py  codexdojo.py  core.py  dojo.py  rules.py
llmdojo/dojo_data/: capture_prompt.md  codex_capture_AGENTS.md  codexdojo_sample.md  codexdojo_template.ipynb  dojo_template.ipynb
llmdojo/dojo_data/proj/: 01_api.ipynb  core.py  pyproject.toml  report.py  templ.py
nbs/: 00_claudedojo.ipynb  01_codexdojo.ipynb  index.ipynb  nbdev.yml
tests/: test_dojo.py  test_rules.py
